--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,9 +7,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="{{ .Site.BaseURL }}/" class="navbar-brand">
-                <span class="fa fa-rss"></span>
-                Blog
+            <a href="{{ .Site.BaseURL }}/" class="navbar-brand deliverous-brand">
+              <img alt="Logo_navbar" src="/images/logo_navbar.svg" />
             </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
