--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -14,7 +14,7 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
             <li><a href="http://deliverous.com/hosting"><span class="fa fa-cloud"></span> Hébergement</a></li>
-            <li><a href="http://deliverous.com/service"><span class="fa fa-graduation-cap"></span> Service</a></li>
+            <li><a href="/service/"><span class="fa fa-graduation-cap"></span> Service</a></li>
             <li><a href="http://deliverous.com/team"><span class="fa fa-group"></span> Équipe</a></li>
             <li><a href="https://github.com/Deliverous"><i class="fa fa-github"></i> GitHub</a></li>
             <li><a href="https://twitter.com/DeliverousCom"><i class="fa fa-twitter"></i> Twitter</a></li>
