--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,6 +21,24 @@ body {
   color: #2e3436;
 }
 
+.block2 {
+  background-color: #babdb6;
+  border-top : solid 4px #888a85;
+  color: #2e3436;
+}
+
+.block3 {
+  background-color: #d3d7cf;
+  color: #2e3436;
+  border-top : solid 4px #555753;
+}
+
+section {
+  margin: 0px;
+  padding-top: 2em;
+  padding-bottom: 2em;
+}
+
 .index-info {
   border-top : solid 1px #888a85;
   background-color: #babdb6;
@@ -30,6 +48,15 @@ body {
   padding-bottom: 1em;
   margin-bottom: 2em;
 }
+
+footer {
+  background-color: #2e3436;
+  color: #eeeeec;
+  margin: 0px;
+  padding-top: 2em;
+  padding-bottom: 2em;
+}
+
 
 .article-illustration {
   display: block;
@@ -269,3 +296,14 @@ code {
 .deliverous-brand {
  padding-top:7px; 
 }
+
+.blabla {
+  font-size: 16px;
+}
+
+.landing {
+  font-size: 21px;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
