--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -17,7 +17,7 @@
   {{ with .Site.Title }}<meta property="og:title" content="{{ . }}">{{ end }}
   {{ with .Site.Params.logo }}<meta property="og:image" content="{{ $.Site.BaseURL }}{{ . }}">{{ end }}
 
-  <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.png">
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css"/>
   <link href="/css/font-awesome.min.css" rel="stylesheet">
