--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 
-{{ if .IsHome }}
+{{ if eq .Site.Params.Home "index" }}
   {{ range where .Data.Pages "Title" "index" }}
     {{ template "theme/_default/single.html" . }}
   {{ end }}
