--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,14 +13,6 @@ body {
   margin-top : 50px;
 }
 
-.block1 a {
-  color: #2e3436;
-}
-
-.block1 a:hover {
-  color: #2e3436;
-}
-
 .block2 {
   background-color: #babdb6;
   border-top : solid 4px #888a85;
@@ -31,6 +23,28 @@ body {
   background-color: #d3d7cf;
   color: #2e3436;
   border-top : solid 4px #555753;
+}
+
+.block4 {
+  background-color: #babdb6;
+  border-top : solid 4px #555753;
+  color: #2e3436;
+}
+
+.block5 {
+  background-color: #d3d7cf;
+  color: #2e3436;
+  border-top : solid 4px #888a85;
+}
+
+/* Page team */
+.photo {
+  width: 200px;
+  margin: 1em;
+}
+
+.social {
+  font-size:32px;
 }
 
 section {
