--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-xs-10">&copy; 2014 Olivier Albiez et Thomas Clavier
         &middot; Powered by <a href="http://www.gohugo.io/" target="_blank">hugo</a>
-        <span class="label label-default">Updated on {{ .Date.Format "2006-01-02 15:04" }}</span>
+        <span class="label label-default">Updated on {{ now | dateFormat "2006-01-02 15:04" }}</span>
       </div>
       <div class="col-xs-2">
         <p class="pull-right"><i class="fa fa-arrow-up"></i> <a href="#">Back to top</a></p>
