generate good index page for marketing

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,4 @@
-
-{{ if eq .Site.Params.Home "index" }}
+{{ if eq .Site.Params.home "single" }}
   {{ range where .Data.Pages "Title" "index" }}
     {{ template "theme/_default/single.html" . }}
   {{ end }}
