--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -27,7 +27,7 @@
                 {{ range $value.Pages.ByDate.Reverse }}
                   <p>
                     <span class="categories-timestamp"><time datetime="{{ .Lastmod }}">{{ .Date.Format "02 Jan" }}</time></span>
-                    <a href="{{ .Permalink }}">{{ .Title }}</a>
+                    <a href="{{ .RelPermalink }}">{{ .Title }}</a>
                   </p>
                 {{ end }}
                 </div>
