--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,7 +8,7 @@
     <meta name="description" content="{{ . }}">
   {{ end }}
 
-  <link rel="canonical" href="{{ .Permalink }}">
+  <link rel="canonical" href="{{ .RelPermalink }}">
   
   {{ with .Site.Params.author }}
     <meta name="author" content="{{ . }}">
