--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,7 +9,7 @@
         <div class="row">
           <div class="col-md-2"></div>
           <div class="col-md-8">
-            <img src="{{ .Permalink }}/illustration__thumbnail-wide.jpg" class="article-illustration"/>
+            <img src="{{ .RelPermalink }}/illustration__thumbnail-wide.jpg" class="article-illustration"/>
             <div class="article-info">
                {{ partial "article-info" . }}
             </div>
@@ -17,7 +17,7 @@
                 <article class="full-article">
                     <header class="page-header">
                         <h1>
-                            <a href="{{ .Permalink }}"
+                            <a href="{{ .RelPermalink }}"
                                rel="bookmark"
                                title="Permalink to {{ .Title }}">
                                 {{ .Title | markdownify }}
