--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="{{ .Site.BaseURL }}/" class="navbar-brand deliverous-brand">
-              <img alt="Logo_navbar" src="/images/logo_navbar.svg" />
+              <img alt="Logo_navbar" src="/assets/images/logo_navbar.svg" />
             </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
