--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -15,10 +15,10 @@
 <script src="http://code.jquery.com/jquery.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/js/bootstrap.min.js"></script>
+<script src="/assets/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/js/respond.min.js"></script>
+<script src="/assets/js/respond.min.js"></script>
 
 <!--
 {% include 'includes/disqus_script.html' %}
