--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -23,6 +23,7 @@
             {{ end }}
             <li><a href="https://github.com/Deliverous"><i class="fa fa-github"></i> GitHub</a></li>
             <li><a href="https://twitter.com/DeliverousCom"><i class="fa fa-twitter"></i> Twitter</a></li>
+            <li><a href="http://blog.deliverous.com"><i class="fa fa-rss"></i> Blog </a> </li>
             <li><a href="mailto://contact@deliverous.com"><i class="fa fa-envelope"></i> Contact</a></li>
             <li><a href="/manager/"><i class="fa fa-user"></i> Login</a></li>
           </ul>
